# python-server-study

./: .gitignore  README.md
fastapi-auth-jwt/: README.md
fastapi-auth-jwt/fastapi-jwt/: .env
fastapi-auth-jwt/fastapi-jwt/app/: api.py  model.py
fastapi-auth-jwt/fastapi-jwt/app/auth/: auth_handler.py
fastapi-basic/src/server/: app.py
fastapi-crud-async/: .gitignore  README.md
fastapi-crud-async/src/app/api/: models.py  notes.py
fastapi-crud-async/src/tests/: test_notes.py
fastapi-crud-sync/: README.md
fastapi-jwt/: README.md  pyproject.toml
fastapi-jwt/app/auth/: auth_bearer.py
fastapi-msa/backend/order/: main.py
fastapi-msa/backend/product/: main.py
fastapi-msa/backend/user/: Dockerfile  main.py
fastapi-msa/frontend/: Dockerfile
fastapi-msa/frontend/src/: App.js
fastapi-odm/fastapi-mongodb-beanie/app/server/: app.py
fastapi-odm/fastapi-mongodb/app/server/: app.py  db.py
fastapi-react/: README.md
fastapi-react/backend/app/: api.py
fastapi-react/frontend/: package.json
fastapi-react/frontend/src/: index.js
fastapi-requet-middleware/: READEME.md
fastapi-requet-middleware/src/: main.py
fastapi/fastapi-auth-session/fastapi-session/: pyproject.toml
fastapi/fastapi-basic/: READMD.md
fastapi/fastapi-crud-async/: docker-compose.yml
fastapi/fastapi-crud-sync/: docker-compose.yml
fastapi/fastapi-msa/: README.md  docker-compose.yml
fastapi/fastapi-odm/fastapi-mongodb/: requirements.txt
fastapi/fastapi-react/backend/: pyproject.toml
fastapi/fastapi-react/frontend/: package-lock.json
(+8 files in other folders)
