[tool.poetry]
name = "fastapi-session"
version = "0.1.0"
description = ""
authors = ["ithingv34 <ithingv34@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_session"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
