[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ithingv34 <ithingv34@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.78.0"
uvicorn = "0.17.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
